= Version History =

x.x:

- fixed: user can no longer register on an invitation only site without invitation
- fixed: no information when no members found
- changed: invitation only sites can now have a register page but no link to it

2.2.1 (2013-05-22):

- changed: user_hover menu admin section supports waternet_workorders
- changed: topbar user dropdown now has two more links and is wider
- fixed: group invite page menu counter
- fixed: group invite dropdown counter

2.2 (2013-05-06):

- added: Elgg 1.8.15 core files
- added: Memcache namespace prefix and stats logging
- changed: temporary fix to copy Piwik setting from phloor_analytics_piwik to analytics
- changed: subsite acl display name now contains more text
- changed: new subsite now have their default access set to the subsite level
- changed: some depricated functions to the new functions
- changed: handling of saving the site url (inline with Elgg core)
- fixed: PHP notice undeclared variable
- fixed: PHP warning in content_stats widget
- fixed: PHP undefined index warnings in web_services.php
- fixed: error in subsite profile field configuration
- fixed: wrong handling of metastring based objects hook
- fixed: page owner not found in Tidypics
- fixed: cleanup of all membership requests on accept/decline
- fixed: problem with incomplete CSS/JS on subsite create
- fixed: problem with some plugins not activating on subsite create
- fixed: livesearch now limits groups to the current site
- fixed: IE8 user hover layout
- removed: Elgg 1.8.3 core files in preparation for Elgg 1.8.15

2.1 (2013-04-05):

- changed: made compatible with Elgg 1.8.14
- fixed: deprecated notice in pages/subsites/list.php

2.0 (2012-07-12):

- fixed: no_access forward to last page if can join
- fixed: plugin settings reset (memcache issue)
- fixed: error on advanced site update for super admins
- fixed: problem with site email address
- removed: sharing with subsite acls on main site

2.0 beta 1 (2012-05-14):
