@@ -4,6 +4,7 @@ x.x:
 
 - fixed: user can no longer register on an invitation only site without invitation
 - fixed: no information when no members found
+- fixed: using a non existing function invalidate_cache_for_entity
 - changed: invitation only sites can now have a register page but no link to it
 
 2.2.1 (2013-05-22):
